[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NAEPDashbord"
version = "1.0.0"
authors = [
    { name="Katherine Castellano", email="kcastellano001@ets.org" },
    { name="Michael Fauss", email="mfauss@ets.org" },
]
description = "Dashboard visualizing the relationship between pre-COVID scores (2019) and score changes since the pandemic (2024–2019) across different percentiles for states and jurisdictions in NAEP assessments."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "streamlit",
]
